Add deployment script and update watermark placeholder text

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                         <input 
                             type="text" 
                             id="watermarkText" 
-                            placeholder="z.B. Copyright 2025 - Mein Name"
+                            placeholder="Copyright 2025 - Richard Krakhofer"
                             maxlength="100"
                         >
                     </div>
